--- a/src/CafeDevCode.Logic/CafeDevCode.Logic.csproj
+++ b/src/CafeDevCode.Logic/CafeDevCode.Logic.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CafeDevCode.Common.Shared\CafeDevCode.Common.Shared.csproj" />
     <ProjectReference Include="..\CafeDevCode.Logic.Shared\CafeDevCode.Logic.Shared.csproj" />
+    <ProjectReference Include="..\CafeDevCode.Ultils\CafeDevCode.Ultils.csproj" />
   </ItemGroup>
 
 </Project>
