--- a/src/CafeDevCode.Website/CafeDevCode.Website.csproj
+++ b/src/CafeDevCode.Website/CafeDevCode.Website.csproj
@@ -10,7 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CafeDevCode.Database\CafeDevCode.Database.csproj" />
+    <ProjectReference Include="..\CafeDevCode.Logic\CafeDevCode.Logic.csproj" />
+    <ProjectReference Include="..\CafeDevCode.Ultils\CafeDevCode.Ultils.csproj" />
   </ItemGroup>
 
 </Project>
