--- a/src/CafeDevCode.Website/appsettings.Development.json
+++ b/src/CafeDevCode.Website/appsettings.Development.json
@@ -13,6 +13,7 @@
   },
   "AuthCookies": {
     "LoginPath": "/User/AdminLogin",
+    "AccessDeniedPath": "/User/AccessDenied",
     "TimeOut": 30
   }
 }
