--- a/src/CafeDevCode.Website/appsettings.json
+++ b/src/CafeDevCode.Website/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Database": "Server=.\\;Database=Website;Trusted_Connection=True;"
+  },
+  "AuthCookies": {
+    "LoginPath": "/User/AdminLogin",
+    "AccessDeniedPath": "/User/AccessDenied",
+    "TimeOut": 30
   }
 }
