--- a/src/CafeDevCode.Website/appsettings.Development.json
+++ b/src/CafeDevCode.Website/appsettings.Development.json
@@ -11,12 +11,19 @@
   "Authenticate": {
 
   },
+  "ExternalAuthen": {
+    "Google": {
+      "ClientId": "908087344999-95ehvr6nsngubnf701sntno7g47i8re5.apps.googleusercontent.com",
+      "ClientSecret": "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",
+      "CallbackPath": "/signin-google"
+    }
+  },
   "AuthCookies": {
     "LoginPath": "/User/AdminLogin",
     "AccessDeniedPath": "/User/AccessDenied",
     "TimeOut": 30
   },
   "FileConfig": {
-    "RootFolder":  "files"
+    "RootFolder": "files"
   }
 }
