--- a/src/CafeDevCode.Website/appsettings.Development.json
+++ b/src/CafeDevCode.Website/appsettings.Development.json
@@ -16,6 +16,10 @@
       "ClientId": "908087344999-95ehvr6nsngubnf701sntno7g47i8re5.apps.googleusercontent.com",
       "ClientSecret": "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",
       "CallbackPath": "/signin-google"
+    },
+    "Facebook": {
+      "AppId": "",
+      "AppSecret":  ""
     }
   },
   "AuthCookies": {
