--- a/src/CafeDevCode.Website/appsettings.Development.json
+++ b/src/CafeDevCode.Website/appsettings.Development.json
@@ -25,5 +25,13 @@
   },
   "FileConfig": {
     "RootFolder": "files"
+  },
+  "SiteConfig": {
+    "HttpUrl": "http://localhost:5197/",
+    "HttpsUrl": "https://localhost:7197/",
+    "FileUrl": "http://localhost:5197/",
+    "Icon": "image/logo.png",
+    "SiteMapDirectory": "//sitemap",
+    "SiteMapPath": "//sitemap.xml"
   }
 }
