--- a/src/CafeDevCode.Website/appsettings.Development.json
+++ b/src/CafeDevCode.Website/appsettings.Development.json
@@ -19,7 +19,7 @@
     },
     "Facebook": {
       "AppId": "",
-      "AppSecret":  ""
+      "AppSecret": ""
     }
   },
   "AuthCookies": {
@@ -37,5 +37,17 @@
     "Icon": "image/logo.png",
     "SiteMapDirectory": "//sitemap",
     "SiteMapPath": "//sitemap.xml"
+  },
+  "ContactInfoConfig": {
+    "PhoneNumber": "0359759402",
+    "Email": "cafedevcode@gmail.com",
+    "Address": "Thành phố Hồ Chí Minh"
+  },
+  "MailConfig": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "UserName": "cafedevcode@gmail.com",
+    "DefaultToMailAddress": "cafedevcode@gmail.com",
+    "Password": "ehzpmbcggfomopjw"
   }
 }
